fix gap css

--- a/styles/main-hero.css
+++ b/styles/main-hero.css
@@ -19,5 +19,5 @@
 .hero-description--container {
     display: flex;
     flex-direction: column;
-    row-gap: 2.4rem;
+    gap: 2.4rem;
 }
