--- a/styles/main-social-tree.css
+++ b/styles/main-social-tree.css
@@ -38,7 +38,7 @@
     height: 100%;
     color: var(--midnight-green);
     font-size: 1.6rem;
-    gap: 1.6rem;
+    gap: 0.4rem;
     font-weight: bold;
     padding: 0.4rem;
     border: 0.4rem solid var(--blue-sapphire);
